<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shemanigans.mime.LongTerm" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_disconnect"
        android:orderInCategory="101"
        android:showAsAction="withText|ifRoom"
        android:title="@string/menu_disconnect"/>
    <item
        android:id="@+id/name_text_file"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/name_text_file"/>
    <item
        android:id="@+id/action_example"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_example"/>

</menu>